@@ -893,7 +893,7 @@ simta_q_scheduler( void )
 	    hq->hq_wait_last.tv_sec = waited;
 	    hq->hq_last_launch.tv_sec = tv_now.tv_sec;
 
-	    /* zero out the next_launch and reschedule */
+	    /* zero out the next_launch (we just did it) and reschedule */
 	    hq->hq_next_launch.tv_sec = 0;
 	    hq_deliver_push( hq, &tv_now );
 
@@ -1308,6 +1308,10 @@ simta_child_receive( struct simta_socket *ss )
 simta_child_q_runner( struct host_q *hq )
 {
     int			pid;
+    char		fname[ MAXPATHLEN ];
+    struct envelope	*envs;
+    struct envelope	*sort;
+    struct stat		sb;
 
 #ifdef Q_SIMULATION
     assert( hq != NULL );
@@ -1320,9 +1324,32 @@ simta_child_q_runner( struct host_q *hq )
 	close( simta_pidfd );
 	simta_host_q = NULL;
 
-	if (( hq != NULL ) && ( hq == simta_unexpanded_q )) {
-	    simta_process_type = PROCESS_Q_SLOW;
-	    exit( q_runner());
+	if ( hq != NULL ) {
+	    /* sort the envs based on etime */
+	    envs = hq->hq_env_head;
+	    hq->hq_entries = 0;
+	    hq->hq_env_head = NULL;
+	    while ( envs != NULL ) {
+		sort = envs;
+		envs = envs->e_hq_next;
+		/* zero out hq so it gets sorted */
+		sort->e_hq = NULL;
+		sort->e_hq_next = NULL;
+		sprintf( fname, "%s/E%s", sort->e_dir, sort->e_id );
+		if ( stat( fname, &sb ) != 0 ) {
+		    if ( errno != ENOENT ) {
+			syslog( LOG_ERR, "simta_child_q_runner stat %s: %m",
+				fname );
+		    }
+		    env_free( sort );
+		    continue;
+		}
+		queue_envelope( sort );
+	    }
+	    if ( hq == simta_unexpanded_q ) {
+		simta_process_type = PROCESS_Q_SLOW;
+		exit( q_runner());
+	    }
 	}
 
 	if ( simta_unexpanded_q != NULL ) {
@@ -1355,15 +1382,8 @@ simta_child_q_runner( struct host_q *hq )
 	break;
     }
 
-    if ( hq == NULL ) {
-	if ( simta_proc_q_runner( pid, hq ) != 0 ) {
-	    return( 1 );
-	}
-
-    } else {
-	if ( simta_proc_q_runner( pid, hq ) != 0 ) {
-	    return( 1 );
-	}
+    if ( simta_proc_q_runner( pid, hq ) != 0 ) {
+	return( 1 );
     }
 
     return( 0 );
