@@ -61,13 +61,10 @@ struct host_q {
     int				hq_primary;
     int				hq_status;
     int				hq_no_punt;
-    int				hq_cycle;
     int				hq_launches;
     int				hq_delay;
     struct envelope		*hq_env_head;
     struct line_file		*hq_err_text;
-    struct timeval		hq_max_etime;
-    struct timeval		hq_min_dtime;
     struct timeval		hq_last_leaky;
     struct timeval		hq_last_launch;
     struct timeval		hq_next_launch;
