@@ -1,5 +1,6 @@
 
 internal
+    - faster disk read times
     - outbound SMTP DNS has better logging and is more consice
     - better process accounting, and logging
     - better listen connection management
